# brainfuck-interpreter

./: Brainfuck.hs  README.md  brainfuck-interpreter.cabal  flake.nix
src/: BrainFuck.hs
src/Data/List/Zipper/: Extended.hs
src/Old/: Brainfuck.hs
test/: Main.hs  test3.bf
test/programs/: reverse.bf
