cabal-version: 3.4
name:          brainfuck-interpreter
version:       0.1.0.0
license:       GPL-3.0-only
license-file:  LICENSE
author:        Ben
category:      Language
build-type:    Simple

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules: 
    BrainFuck
  other-modules:
    Data.List.Zipper.Extended
    Old.Brainfuck
  build-depends:
    , base        ^>=4.18.2.1
    , ListZipper
    , mtl
    , bytestring
    , parsec

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite brainfuck-interpreter-test
  import:           warnings
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base                   ^>=4.18.2.1
    , brainfuck-interpreter
    , bytestring
    , hspec
